# agent-sleuth

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  cliff.toml  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  integration.yml  perf.yml  release.yml
docs/: index.md  quickstart.md
docs/about/: design-spec.md
docs/adapters/: frameworks.md  index.md  mcp.md  python.md
docs/backends/: code-search.md  custom.md  index.md  local-files.md  vector-store.md  web.md
docs/concepts/: architecture.md  byok.md  caching.md  events.md  index.md
docs/recipes/: deep-mode.md  index.md  observability.md  sessions.md  structured-output.md
docs/reference/: backends.md  events-types.md  index.md  llm.md  memory.md  sleuth.md
docs/release-notes/: v0.1.0.md
docs/stylesheets/: extra.css
docs/superpowers/plans/: 2026-04-25-phase-0-bootstrap.md  2026-04-25-phase-1-core-mvp.md  2026-04-25-phase-10-llm-shims.md  2026-04-25-phase-11-perf-hardening.md  2026-04-25-phase-2-localfiles.md  2026-04-25-phase-3-planner-deep.md  2026-04-25-phase-4-memory.md  2026-04-25-phase-5-codesearch.md  2026-04-25-phase-6-vectorstore.md  2026-04-25-phase-7-framework-adapters.md  2026-04-25-phase-8-mcp.md  2026-04-25-phase-9-web-providers.md  _conventions.md  _reconciliations.md
docs/superpowers/specs/: 2026-04-25-sleuth-design.md
scripts/: perf-baseline.py
src/sleuth/: __init__.py  _agent.py  errors.py  events.py  logging.py  types.py
src/sleuth/autogen/: __init__.py  _tool.py
src/sleuth/backends/: __init__.py  base.py  codesearch.py  localfiles.py  vectorstore.py  web.py
src/sleuth/backends/_codesearch/: _embedder.py  _ripgrep.py  _symbol_index.py  _treesitter.py
src/sleuth/backends/_localfiles/: __init__.py  hasher.py  models.py  navigator.py  parsers.py  persistence.py  tree_builder.py
src/sleuth/backends/_vectorstore/: __init__.py  chroma.py  pinecone.py  qdrant.py  weaviate.py
src/sleuth/backends/_web/: __init__.py  _base.py  brave.py  exa.py  serpapi.py  tavily.py
src/sleuth/claude_agent/: __init__.py  _tool.py
src/sleuth/crewai/: __init__.py  _tool.py
src/sleuth/engine/: executor.py  planner.py  router.py  synthesizer.py
src/sleuth/langchain/: __init__.py  _callback.py  _retriever.py  _tool.py
src/sleuth/langgraph/: __init__.py  _node.py
src/sleuth/llamaindex/: __init__.py  _query_engine.py  _retriever.py
src/sleuth/llm/: __init__.py  anthropic.py  base.py  openai.py  stub.py
src/sleuth/mcp/: __init__.py  __main__.py  config.py  server.py
src/sleuth/memory/: __init__.py  cache.py  semantic.py  session.py
src/sleuth/openai_agents/: __init__.py  _tool.py
src/sleuth/pydantic_ai/: __init__.py  _tool.py
tests/: conftest.py  test_agent.py  test_conftest_bootstrap.py  test_errors.py  test_events.py  test_logging.py  test_public_api.py  test_types.py
tests/adapters/: conftest.py  test_integration_smoke.py
tests/adapters/autogen/: test_tool.py
tests/adapters/claude_agent/: test_tool.py
tests/adapters/crewai/: test_tool.py
tests/adapters/langchain/: test_callback.py  test_retriever.py  test_tool.py
tests/adapters/langgraph/: test_node.py
tests/adapters/llamaindex/: test_query_engine.py  test_retriever.py
tests/adapters/mcp/: test_config.py  test_server.py
tests/adapters/openai_agents/: test_tool.py
tests/adapters/pydantic_ai/: test_tool.py
tests/backends/: conftest.py  test_codesearch.py  test_localfiles.py  test_vectorstore.py  test_web.py
tests/backends/_vectorstore/: test_chroma.py  test_pinecone.py  test_qdrant.py  test_weaviate.py
tests/backends/_web/: test_base.py  test_brave.py  test_exa.py  test_serpapi.py  test_tavily.py  test_web_factory.py
tests/contract/: test_backend_protocol.py
tests/engine/: test_executor.py  test_executor_timeout.py  test_planner.py  test_router.py  test_synthesizer.py
tests/engine/__snapshots__/: test_planner.ambr
tests/integration/: test_web_providers.py
tests/llm/: test_anthropic.py  test_base.py  test_openai.py  test_stub.py
tests/memory/: test_cache.py  test_semantic.py  test_session.py
tests/perf/: conftest.py  test_bench_cache_hit.py  test_bench_deep_mode.py  test_bench_fast_path.py  test_bench_localfiles.py
tests/perf/baselines/: develop.json
tests/snapshots/: test_event_stream_snapshot.py
tests/snapshots/__snapshots__/: test_event_stream_snapshot.ambr
