[project]
name = "agent-sleuth"
version = "0.1.0"
description = "Plug-and-play agentic search with reasoning, planning, citations, and observability."
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "agent-sleuth maintainers"}]
dependencies = [
    "pydantic>=2.6",
    "httpx>=0.27",
    "anyio>=4.3",
    "aiosqlite>=0.19",      # Cache backend (Phase 4)
]

[project.optional-dependencies]
# LLM shims (Phase 10)
anthropic     = ["anthropic>=0.40"]
openai        = ["openai>=1.40"]

# Framework adapters (Phase 7)
langchain     = ["langchain-core>=0.3"]
langgraph     = ["langgraph>=0.2"]
llamaindex    = ["llama-index-core>=0.11"]
openai-agents = ["openai-agents>=0.1"]
claude-agent  = ["claude-agent-sdk>=0.1"]
pydantic-ai   = ["pydantic-ai>=0.0.13"]
crewai        = ["crewai>=0.80"]
autogen       = ["pyautogen>=0.3"]

# MCP frontend (Phase 8)
mcp           = ["mcp>=1.0", "uvicorn>=0.30"]

# Backends
localfiles    = ["pymupdf>=1.24", "pathspec>=0.12", "xxhash>=3.4"]    # Phase 2
code          = [                                                       # Phase 5
    "tree-sitter>=0.22",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "aiofiles>=23.2",
    "aiosqlite>=0.20",
]
code-embed    = [                                                       # Phase 5 optional re-rank
    "agent-sleuth[code]",
    "fastembed>=0.3",
    "numpy>=1.26",
]
exa           = ["exa-py>=1.0"]                                        # Phase 9
web-fetch     = ["trafilatura>=1.7", "tiktoken>=0.7"]                  # Phase 9 fetch=True mode

# Vector store adapters (Phase 6) — each behind its own extra
pinecone      = ["pinecone-client>=4.0"]
qdrant        = ["qdrant-client>=1.10"]
chroma        = ["chromadb>=0.5"]
weaviate      = ["weaviate-client>=4.6"]

# Memory layer (Phase 4)
semantic      = ["fastembed>=0.3", "numpy>=1.26"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "pytest-benchmark>=4.0",
    "syrupy>=4.6",
    "hypothesis>=6.100",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.7",
    "commitizen>=3.27",
    "detect-secrets>=1.5",
    "pip-audit>=2.7",
    "anthropic>=0.97.0",
    "openai>=2.32.0",
    "exa-py>=1.0",
    "trafilatura>=1.7",
    "tiktoken>=0.7",
    "numpy>=1.26",          # SemanticCache tests; runtime users get it via [semantic] extra
    # Phase 2: LocalFiles test deps (available without installing the extra)
    "pymupdf>=1.24",
    "pathspec>=0.12",
    "xxhash>=3.4",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
]

[project.scripts]
# Phase 8 adds: sleuth-mcp = "sleuth.mcp.__main__:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sleuth"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF", "ASYNC"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_missing_imports = true
disable_error_code = ["type-arg", "misc", "unused-ignore"]

[[tool.mypy.overrides]]
module = [
    "aiosqlite",
    "fastembed",
    "numpy",
    "anthropic", "anthropic.*",
    "openai", "openai.*",
    "trafilatura", "trafilatura.*",
    "exa_py", "exa_py.*",
    "tiktoken", "tiktoken.*",
    # Phase 2: LocalFiles backend optional deps (no type stubs available)
    "fitz", "fitz.*",
    "xxhash",
    "pathspec", "pathspec.*",
    "tree_sitter", "tree_sitter.*",
    "tree_sitter_python",
    "tree_sitter_javascript",
    "tree_sitter_typescript",
    # Phase 7: Framework adapter deps (no type stubs available)
    "langchain_core", "langchain_core.*",
    "langgraph", "langgraph.*",
    "llama_index", "llama_index.*",
    "agents", "agents.*",
    "claude_agent_sdk", "claude_agent_sdk.*",
    "pydantic_ai", "pydantic_ai.*",
    "crewai", "crewai.*",
    "autogen_agentchat", "autogen_agentchat.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "sleuth.langchain",
    "sleuth.langchain.*",
    "sleuth.langgraph",
    "sleuth.langgraph.*",
    "sleuth.llamaindex",
    "sleuth.llamaindex.*",
    "sleuth.openai_agents",
    "sleuth.openai_agents.*",
    "sleuth.claude_agent",
    "sleuth.claude_agent.*",
    "sleuth.pydantic_ai",
    "sleuth.pydantic_ai.*",
    "sleuth.crewai",
    "sleuth.crewai.*",
    "sleuth.autogen",
    "sleuth.autogen.*",
]
# Framework adapters subclass from externally-typed bases that lack stubs;
# misc/unused-ignore/no-any-return suppressed because import resolution differs by env.
disable_error_code = ["misc", "unused-ignore", "no-any-return"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "unit: default — runs every push",
    "integration: env-gated, nightly",
    "perf: regression suite",
    "adapter: per-framework smoke",
]

[tool.coverage.run]
source = ["src/sleuth"]
branch = true

[tool.coverage.report]
fail_under = 85
exclude_also = ["if TYPE_CHECKING:", "@overload"]
